; ModuleID = '/home/carl/AnghaBench/linux/fs/btrfs/extr_block-rsv.c_btrfs_block_rsv_check.c'
source_filename = "/home/carl/AnghaBench/linux/fs/btrfs/extr_block-rsv.c_btrfs_block_rsv_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_block_rsv = type { i64, i32, i32 }

@ENOSPC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btrfs_block_rsv_check(%struct.btrfs_block_rsv* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.btrfs_block_rsv*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.btrfs_block_rsv* %0, %struct.btrfs_block_rsv** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 0, i64* %6, align 8
  %8 = load i32, i32* @ENOSPC, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %7, align 4
  %10 = load %struct.btrfs_block_rsv*, %struct.btrfs_block_rsv** %4, align 8
  %11 = icmp ne %struct.btrfs_block_rsv* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %33

13:                                               ; preds = %2
  %14 = load %struct.btrfs_block_rsv*, %struct.btrfs_block_rsv** %4, align 8
  %15 = getelementptr inbounds %struct.btrfs_block_rsv, %struct.btrfs_block_rsv* %14, i32 0, i32 1
  %16 = call i32 @spin_lock(i32* %15)
  %17 = load %struct.btrfs_block_rsv*, %struct.btrfs_block_rsv** %4, align 8
  %18 = getelementptr inbounds %struct.btrfs_block_rsv, %struct.btrfs_block_rsv* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %5, align 4
  %21 = call i64 @div_factor(i32 %19, i32 %20)
  store i64 %21, i64* %6, align 8
  %22 = load %struct.btrfs_block_rsv*, %struct.btrfs_block_rsv** %4, align 8
  %23 = getelementptr inbounds %struct.btrfs_block_rsv, %struct.btrfs_block_rsv* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* %6, align 8
  %26 = icmp sge i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %13
  store i32 0, i32* %7, align 4
  br label %28

28:                                               ; preds = %27, %13
  %29 = load %struct.btrfs_block_rsv*, %struct.btrfs_block_rsv** %4, align 8
  %30 = getelementptr inbounds %struct.btrfs_block_rsv, %struct.btrfs_block_rsv* %29, i32 0, i32 1
  %31 = call i32 @spin_unlock(i32* %30)
  %32 = load i32, i32* %7, align 4
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %28, %12
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i64 @div_factor(i32, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
